<resources>
    <string name="app_name">StoreDemo</string>
    <string name="title_home">首页</string>
    <string name="title_game">游戏</string>
    <string name="title_software">软件</string>
    <string name="title_my">我的</string>

    <string name="home_item_recommend">精选</string>
    <string name="home_item_rank">排行</string>
    <string name="home_item_category">分类</string>

    <string name="action_install">安装</string>
    <string name="action_open">Open</string>
    <string name="label_app_desc">关于此应用</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_app_details">AppDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>